<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PromoBoxAndroid</string>
    <string name="title_activity_main">PromoBox</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">MainService</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="quit"></string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="main_activity_title_promo">Promo</string>
    <string name="main_activity_title_box">Box</string>
    <string name="main_activity_status_loading">loading...</string>
    <string name="silent_mode">Silent mode</string>
    <string name="silent_mode_summary">No Toasts will be shown</string>
    <string name="device_id">Device ID:</string>
    <string name="enter_device_id">Enter device ID. It can be found on site under Devices</string>
    <string name="enter_uuid_button_txt">Start</string>
    <string name="player_unknown_time">00:00</string>
    <string name="no_active_campaigns">NO ACTIVE CAMPAIGN AT THE MOMENT</string>
    <string name="network_ethernet">LAN Cable</string>
    <string name="network_wifi">WLAN</string>
    <string name="title_activity_wifi">Select network</string>

    <string name="network_disconnected">Disconnected</string>
    <string name="network_connected">CONNECTED</string>
    <string name="network_connecting">Connecting...</string>

    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="signal_strength">Signal strength</string>
    <string name="security">Security</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>

    <string name="signal_strength_low">Low</string>
    <string name="signal_strength_weak">Weak</string>
    <string name="signal_strength_medium">Medium</string>
    <string name="signal_strength_normal">Normal</string>
    <string name="signal_strength_strong">Strong</string>
    <string name="pref_monitor_id">Monitor ID</string>
    <string name="skip">skip</string>

</resources>
