<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ee.promobox.promoboxandroid.FragmentMain">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_title_promo"
                android:textSize="50sp"
                android:textColor="#ffcdcdcd"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity_title_box"
                android:textSize="50sp"
                android:textColor="#ffcea974"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_activity_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_activity_status_loading"
            android:textSize="20sp"
            android:gravity="center" />

    </LinearLayout>

</FrameLayout>
